# micrograd

./: .gitignore  Comparisons.ipynb  README-original.md  README.md  Untitled.ipynb  Untitled1.ipynb  comparison.py  comparison_cv.py  comparison_torch_micrograd.py  demo.ipynb  example.py  example2.py  example_adam.py  example_torch_micrograd.py  example_trainer.py  example_trainer2.py  main_adam.py  pyproject.toml  torch_e2.py  torchexample.py  trace_graph.ipynb
.github/workflows/: python-package.yml
micrograd/: __init__.py  activation_functions.py  adam.py  cross_entropy.py  data.py  engine.py  nn.py  torch_micrograd.py
micrograd/generics/: generic_base_.py  micrograd_.py  torch_.py
test/: test_crossEntropyLoss.py  test_trainer.py  test_trainer2.py
