[project]
name = "micrograd"
version = "0.2.0"
authors = [
    { name = "Andrej Karpathy", email = "andrej.karpathy@gmail.com" },
    { name = "Sermet Pekin", email = "sermet.pekin@gmail.com" },
]
description = "A tiny scalar-valued autograd engine with a small PyTorch-like neural network library on top."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "black>=24.10.0",
    "graphviz>=0.20.3",
    "matplotlib>=3.7.5",
    "pytest>=8.3.4",
    "ruff>=0.8.1",
    "scikit-learn>=1.3.2",
    "torch>=2.5.1",
    "tox>=4.23.2",
]

[project.urls]
Source = "https://github.com/SermetPekin/micrograd"
Original = "https://github.com/karpathy/micrograd"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

